Fixing Form Spacing: Part 8

--- a/styles.css
+++ b/styles.css
@@ -422,11 +422,8 @@
     #addressfield {
         margin-bottom: 30px;
     }
-    #cardfieldType3 {
-        margin-right: 30px;
-    }
     #cardfieldType4 {
-        margin-left: 25px;
+        margin-left: 35px;
         margin-bottom: 30px;
     }
     #emailfield {
